# Ride

./: README.md  pyproject.toml  requirements.txt
examples/: benchmark_examples.ipynb  examples.ipynb  heuristic_example.ipynb  vrp_example.ipynb
ride/: __init__.py  centroids_graph_builder.py  city_tests.py  common.py  graph_osm_loader.py  grapher.py  pfa.py  utils.py
ride/centroid_graph/: __init__.py  centroids_graph_builder.py
ride/clustering/: __init__.py  clustering.py
ride/drawer/: __init__.py  folium_drawer.py
ride/path_finding/: __init__.py  advenced_pfa.py  dijkstra_pfa.py  excraction_pfa.py  heuristic_pfa.py
ride_pfa/: __init__.py  benchmark.py  exceptions.py  graph_osm_loader.py  heuristics.py  tqdm_progress_bar.py  utils.py
ride_pfa/centroid_graph/: __init__.py  centroids_graph_builder.py
ride_pfa/clustering/: __init__.py  clustering.py
ride_pfa/drawer/: __init__.py  folium_drawer.py  matplotlib_drawer.py
ride_pfa/path_finding/: __init__.py  advenced_pfa.py  dijkstra_pfa.py  excraction_pfa.py  heuristic_pfa.py  pfa.py
ride_vrp/: common_model.py  configs.py  data_model.py  distance_matrix.py  exceptions.py  heuristics.py  initial_solution_builder.py  readme.md  requirements.txt  routing_manager.py
ride_vrp/distances/: distances.py
ride_vrp/initial_solution/: pdptw_solution_builder.py
ride_vrp/managers/: pdptw_routing_manager_builder.py
ride_vrp/notebooks/: example.ipynb  example_synt.ipynb
ride_vrp/or_tools/: callback.py  configs.py  model.py
ride_vrp/scripts/: __init__.py  cargo_delivery.py  data_model.py  exceptions.py  multi_knapsack.py  routing_model.py
