[tool.poetry]
name = "ride_pfa"
version = "0.1.2"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
networkx = ">=3.4.2"
numpy = ">=1.25.2"

[tool.poetry.group.dev.dependencies]
tqdm = "^4.67.1"
osmnx = ">=1.9.3"
jupyter = "^1.1.1"


[tool.poetry.group.drawing]
optional = true
[tool.poetry.group.drawing.dependencies]
geopandas = ">=0.14.4"
matplotlib = ">=3.8.4"
folium = ">=0.17.0"

[tool.poetry.group.heuristic]
optional = true
[tool.poetry.group.heuristic.dependencies]
scikit-learn = "^1.4.2"
kmedoids = "^0.5.3.1"

[tool.poetry.group.vrp]
optional = true
[tool.poetry.group.vrp.dependencies]
ortools = "^9.14.6206"
igraph = "^0.11.9"
leidenalg = "^0.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


